force-app/main/default/objects/Human_Handoff__c/Human_Handoff__c.object-meta.xml
<CustomObject>
    <description>The escape hatch. If the agent fails, the person who was already struggling must not be stuck with a machine. Reached by message, never by phone call.</description>
    <label>Human Handoff</label>
    <nameField><label>Handoff Number</label><type>AutoNumber</type><displayFormat>HH-{00000}</displayFormat></nameField>
    <pluralLabel>Human Handoffs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>