force-app/main/default/objects/Human_Handoff__c/fields/Barrier_Report__c.field-meta.xml
<CustomField>
    <fullName>Barrier_Report__c</fullName>
    <description>What the person had already said before asking for a human.</description>
    <inlineHelpText>Read this before you make contact. They have already explained once. Making them do it again is the thing we promised would not happen.</inlineHelpText>
    <label>Barrier Report</label>
    <referenceTo>Barrier_Report__c</referenceTo>
    <relationshipLabel>Human Handoffs</relationshipLabel>
    <relationshipName>Human_Handoffs</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <type>Lookup</type>
</CustomField>