force-app/main/default/objects/Human_Handoff__c/fields/Handler_Name__c.field-meta.xml
<CustomField>
    <fullName>Handler_Name__c</fullName>
    <description>The person who picked this up.</description>
    <inlineHelpText>Who has this. Put your own name here when you take it, so the next shift knows it is not waiting on nobody.</inlineHelpText>
    <label>Handler Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>