force-app/main/default/objects/Human_Handoff__c/fields/Interpreter_Booked_At__c.field-meta.xml
<CustomField>
    <fullName>Interpreter_Booked_At__c</fullName>
    <description>When a human interpreter was actually booked. The gap between this and Requested At is the whole cost to the person waiting.</description>
    <inlineHelpText>When an interpreter was booked. Until this is filled in, somebody is waiting on a person and cannot do anything else. The gap between this and Requested At is the entire cost to them.</inlineHelpText>
    <label>Interpreter Booked At</label>
    <type>DateTime</type>
</CustomField>