force-app/main/default/objects/Human_Handoff__c/fields/Picked_Up_At__c.field-meta.xml
<CustomField>
    <fullName>Picked_Up_At__c</fullName>
    <description>When a person took this on.</description>
    <inlineHelpText>When someone actually took it. Empty means nobody has, and somebody is currently sitting in silence.</inlineHelpText>
    <label>Picked Up At</label>
    <type>DateTime</type>
</CustomField>