force-app/main/default/objects/Human_Handoff__c/fields/Reachable_By__c.field-meta.xml
<CustomField>
    <fullName>Reachable_By__c</fullName>
    <description>How this person can be reached.</description>
    <inlineHelpText>Use exactly what this says. Telephone is not on this list and never will be. 'I'll just give them a quick call' is the specific failure this record exists to prevent.</inlineHelpText>
    <label>Reachable By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Text message</fullName><default>true</default><label>Text message</label></value>
            <value><fullName>Video</fullName><default>false</default><label>Video</label></value>
            <value><fullName>In person</fullName><default>false</default><label>In person</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>