force-app/main/default/objects/Human_Handoff__c/fields/Requested_At__c.field-meta.xml
<CustomField>
    <fullName>Requested_At__c</fullName>
    <description>When the person asked for a human.</description>
    <inlineHelpText>When they asked. Work the oldest first; the wait is the whole harm here.</inlineHelpText>
    <label>Requested At</label>
    <type>DateTime</type>
</CustomField>