force-app/main/default/objects/Human_Handoff__c/fields/Return_Code_Hash__c.field-meta.xml
<CustomField>
    <fullName>Return_Code_Hash__c</fullName>
    <description>Salted hash of the code the person keeps. A web visitor is anonymous, so there is no address to reply to. Rather than promise a reply we cannot deliver, we hand them a code and they come back with it, on any channel, to the same handler without explaining again.</description>
    <inlineHelpText>Never shown to staff. The person's own copy is the only readable one.</inlineHelpText>
    <label>Return Code Hash</label>
    <length>64</length>
    <type>Text</type>
</CustomField>