force-app/main/default/objects/Human_Handoff__c/listViews/All_Handoffs.listView-meta.xml
<ListView>
    <fullName>All_Handoffs</fullName>
    <columns>NAME</columns>
    <columns>Requested_At__c</columns>
    <columns>Reachable_By__c</columns>
    <columns>Handler_Name__c</columns>
    <columns>Picked_Up_At__c</columns>
    <columns>Barrier_Report__c</columns>
    <filterScope>Everything</filterScope>
    <label>All handoffs</label>
</ListView>