force-app/main/default/objects/Human_Handoff__c/listViews/Being_Worked.listView-meta.xml
<ListView>
    <fullName>Being_Worked</fullName>
    <columns>NAME</columns>
    <columns>Handler_Name__c</columns>
    <columns>Picked_Up_At__c</columns>
    <columns>Reachable_By__c</columns>
    <columns>Barrier_Report__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Handler_Name__c</field>
        <operation>notEqual</operation>
        <value></value>
    </filters>
    <label>Being worked</label>
</ListView>