force-app/main/default/objects/Human_Handoff__c/listViews/Reachable_Only_By_Video.listView-meta.xml
<ListView>
    <fullName>Reachable_Only_By_Video</fullName>
    <columns>NAME</columns>
    <columns>Requested_At__c</columns>
    <columns>Handler_Name__c</columns>
    <columns>Barrier_Report__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Reachable_By__c</field>
        <operation>equals</operation>
        <value>Video</value>
    </filters>
    <label>Reachable by video only</label>
</ListView>