force-app/main/default/objects/Human_Handoff__c/listViews/Waiting_For_A_Person.listView-meta.xml
<ListView>
    <fullName>Waiting_For_A_Person</fullName>
    <columns>NAME</columns>
    <columns>Requested_At__c</columns>
    <columns>Reachable_By__c</columns>
    <columns>Handler_Name__c</columns>
    <columns>Barrier_Report__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Picked_Up_At__c</field>
        <operation>equals</operation>
    </filters>
    <label>Waiting for a person</label>
</ListView>